--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1>Hello World</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>New Structure HTML</title>
+</head>
+<body>
+	
+</body>
+</html>
